assets/css/style.scss
---
---

@import "{{ site.theme }}";

/* HEADER (homepage) */
.page-header {
  background: linear-gradient(135deg, #243b55, #141e30);
}

/* FUNDO GLOBAL */
body {
  background-color: #f5f7fa;
}

/* CONTEÚDO DOS POSTS */
.main-content {
  background-color: #ffffff;
  border-radius: 6px;
  max-width: 800px;
  margin: auto;
  padding: 20px;
}

/* TÍTULOS */
h1, h2, h3 {
  color: #243b55;
}

/* LINKS */
a {
  color: #1f3a5f;
}

a:hover {
  color: #0f2027;
}


/* remover footer completamente */
footer,
.site-footer {
  display: none !important;
}

